--- a/ntrip_client_ros/Cargo.toml
+++ b/ntrip_client_ros/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2024"
 anyhow = "1.0.98"
 clap = "4.5.36"
 log = "0.4.27"
-ntrip_client = {path="../../ntrip_client_rust"}
+# ntrip_client = {path="../../ntrip_client_rust"}
+ntrip_client = {git="https://github.com/lucasw/ntrip_client_rust", branch="ntrip_auth"}
 rtcm_parser = {git="https://github.com/TonyWelte/rtcm_parser.git"}
 simple_logger = "5.0.0"
 tokio = "1.44.2"
